// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

import "./FMDDocumentProperty.proto";

message FMDCreateDocument {
extensions 6 to 106;
    required string name = 1;
    required string path = 2;
    required string mimeType = 3;
    optional uint32 domainId = 4;
    repeated FMDDocumentProperty properties = 5;
}
