// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// VERSION : 2.0.0 : FA : ISIS-FT-2215 : 11/01/2018 : Retrieve proto from dc .
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

import "./FMDFileType.proto";

message FMDFileInfo {
    extensions 3 to 106;
    required FMDFileType.FILE_TYPE type = 1;
    required string                serializedOid = 2;
}
