// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;
import "../ccsds_mal/ATTRIBUTE.proto";

message SendLog {
extensions 9 to 109;
    required int64 uid = 1;
    repeated ccsds_mal.protobuf.ATTRIBUTE arguments = 2;
}
